logger improvement and config updater improvement
logger improvement and config updater improvement